@@ -1,0 +1,9 @@
+{
+    "type": "coverage",
+    "data.test": "data/data.csv",
+    "domains": ["propositional"],
+    "response_types": ["single-choice"],
+    "models": [
+        "models/Baseline/Random-Model/random_model.py"
+    ]
+}
