@@ -1,0 +1,12 @@
+{
+    "type": "adaption",
+    "data.train": "data/Ragni2018_carddir.csv",
+    "data.test": "data/Ragni2018_carddir.csv",
+    "corresponding_data": true,
+    "domains": ["spatial-relational"],
+    "response_types": ["single-choice"],
+    "models": [
+        "models/Baseline/Random-Model/random_model.py",
+        "models/Baseline/Transitive-Closure/transitive_closure.py"
+    ]
+}
