@@ -1,0 +1,10 @@
+{
+    "type": "coverage",
+    "data.test": "data/Ragni2018_carddir.csv",
+    "domains": ["spatial-relational"],
+    "response_types": ["single-choice"],
+    "models": [
+        "models/Baseline/Random-Model/random_model.py",
+        "models/Baseline/Transitive-Closure/transitive_closure.py"
+    ]
+}
